Changelog
=========

1.1-dev - (2011-02-23)
----------------------

1.0-dev - (2011-02-23)
------------------
 * Change: eggified product [ichimdav #2931]
