@@ -22,3 +22,8 @@
 """
 $Id$
 """
+  # -*- extra stuff goes here -*- 
+
+def initialize(context):
+    """Initializer called when used as a Zope 2 product."""
+
