@@ -1,6 +1,7 @@
 <configure xmlns="http://namespaces.zope.org/zope"
            xmlns:browser="http://namespaces.zope.org/browser"
-           xmlns:five="http://namespaces.zope.org/five">
+           xmlns:five="http://namespaces.zope.org/five"
+           i18n_domain="eea">
 
     <include file="resources.zcml" />
 
@@ -19,7 +20,7 @@
         permission="zope.Public"
         />
        
-
+    <!--
     <browser:page
         for="*"
         name="inApplication"
@@ -27,7 +28,7 @@
         permission="zope.Public"
 	attribute="inApplication"
         /> 
-
+    -->
     <browser:page
         for="*"
         template="www/webapp_menu.pt"
