@@ -3,7 +3,8 @@
            xmlns:five="http://namespaces.zope.org/five">
 
   <include package=".browser" />
-
+  <include file="profiles.zcml" />
+  <five:registerPackage package="." initialize=".initialize" />
 
   <five:implements class="ZPublisher.HTTPRequest.HTTPRequest"
     interface="zope.publisher.interfaces.browser.IDefaultBrowserLayer"
