@@ -1,30 +1,0 @@
-<configure xmlns="http://namespaces.zope.org/zope"
-           xmlns:browser="http://namespaces.zope.org/browser"
-           xmlns:five="http://namespaces.zope.org/five">
-
-  <five:traversable
-      class="Products.Archetypes.atapi.BaseObject"
-      />
-
-  <five:traversable
-      class="Products.CMFCore.PortalObject.PortalObjectBase"
-      />
-
-  <five:traversable
-      class="Products.CMFCore.PortalContent.PortalContent"
-      />
-
-  <!-- Make all CMF style tools traversable via SimpleItem !danger! -->
-  <five:traversable
-      class="OFS.SimpleItem.SimpleItem"
-      />
-
-  <five:traversable
-      class="Products.CMFCore.DirectoryView.DirectoryViewSurrogate"
-      />
-
-  <five:traversable
-      class="Products.CMFPlone.PloneFolder.PloneFolder"
-      />
-
-</configure>
