@@ -1,0 +1,16 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="eea">
+
+  <genericsetup:registerProfile
+      name="default"
+      title="Products.eeawebapplication"
+      directory="profiles/default"
+      description='Extension profile for the "Products.eeawebapplication"
+      package'
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+</configure>
+
